# test_mesh

./: CMakeLists.txt  glfw3.lib
shader/: shader.frag  shader.vert  shader_light.frag
src/: camera.cpp  camera.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h
